[gd_scene load_steps=4 format=3 uid="uid://br4ed6fh52lbm"]

[ext_resource type="Script" path="res://Assets/Scripts/Enemy.gd" id="1_0moui"]
[ext_resource type="Texture2D" uid="uid://s11i10bt2n4c" path="res://Assets/Sprites/log.png" id="2_q4n1q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5kw74"]
radius = 7.0
height = 22.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_0moui")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_q4n1q")
region_enabled = true
region_rect = Rect2(34.3498, 4.96395, 26.7736, 28.2506)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_5kw74")

[node name="Hitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_5kw74")

[connection signal="no_health" from="." to="." method="_on_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
